--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "parse server",
   "main": "app.js",
   "scripts": {
-    "parse": "node app.js"
+    "start": "node app.js"
   },
   "keywords": [
     "parse",
