update node engin

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "parse",
   "version": "1.0.0",
   "description": "parse server",
+  "engines": {
+    "node": "5.9.0"
+  }
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
